P2 should be a player close to p1s skill not hardcoded to the second players slot or else we may infinitely loop through just matching the first and second players.